--- a/.github/workflows/system.yml
+++ b/.github/workflows/system.yml
@@ -63,17 +63,17 @@ jobs:
             RECREATE_BUCKETS: "true"
             PORT: 7074
             BACKEND: "posix"
-          #- set: 6
-          #  LOCAL_FOLDER: /tmp/gw6
-          #  BUCKET_ONE_NAME: versity-gwtest-bucket-one-6
-          #  BUCKET_TWO_NAME: versity-gwtest-bucket-two-6
-          #  IAM_TYPE: folder
-          #  USERS_FOLDER: /tmp/iam6
-          #  AWS_ENDPOINT_URL: https://127.0.0.1:7075
-          #  RUN_SET: "aws"
-          #  RECREATE_BUCKETS: "false"
-          #  PORT: 7075
-          #  BACKEND: "posix"
+          - set: 6
+            LOCAL_FOLDER: /tmp/gw6
+            BUCKET_ONE_NAME: versity-gwtest-bucket-one-6
+            BUCKET_TWO_NAME: versity-gwtest-bucket-two-6
+            IAM_TYPE: folder
+            USERS_FOLDER: /tmp/iam6
+            AWS_ENDPOINT_URL: https://127.0.0.1:7075
+            RUN_SET: "aws"
+            RECREATE_BUCKETS: "false"
+            PORT: 7075
+            BACKEND: "posix"
           - set: 7
             LOCAL_FOLDER: /tmp/gw7
             BUCKET_ONE_NAME: versity-gwtest-bucket-one-7
