--- a/.github/workflows/system.yml
+++ b/.github/workflows/system.yml
@@ -8,17 +8,17 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          #- set: 1
-          #  LOCAL_FOLDER: /tmp/gw1
-          #  BUCKET_ONE_NAME: versity-gwtest-bucket-one-1
-          #  BUCKET_TWO_NAME: versity-gwtest-bucket-two-1
-          #  IAM_TYPE: folder
-          #  USERS_FOLDER: /tmp/iam1
-          #  AWS_ENDPOINT_URL: https://127.0.0.1:7070
-          #  RUN_SET: "s3cmd"
-          #  RECREATE_BUCKETS: "true"
-          #  PORT: 7070
-          #  BACKEND: "posix"
+          - set: 1
+            LOCAL_FOLDER: /tmp/gw1
+            BUCKET_ONE_NAME: versity-gwtest-bucket-one-1
+            BUCKET_TWO_NAME: versity-gwtest-bucket-two-1
+            IAM_TYPE: folder
+            USERS_FOLDER: /tmp/iam1
+            AWS_ENDPOINT_URL: https://127.0.0.1:7070
+            RUN_SET: "s3cmd"
+            RECREATE_BUCKETS: "true"
+            PORT: 7070
+            BACKEND: "posix"
           - set: 2
             LOCAL_FOLDER: /tmp/gw2
             BUCKET_ONE_NAME: versity-gwtest-bucket-one-2
