test: multiple policy principals, improved bucket cleanup, general cleanup

--- a/tests/.env.default
+++ b/tests/.env.default
@@ -18,3 +18,10 @@ USERS_FOLDER=$PWD/iam
 #TEST_LOG_FILE=test.log
 #VERSITY_LOG_FILE=versity.log
 IAM_TYPE=folder
+DIRECT=false
+#DIRECT_DISPLAY_NAME=
+#COVERAGE_DB=coverage.sql
+USERNAME_ONE=ABCDEFG
+PASSWORD_ONE=HIJKLMN
+USERNAME_TWO=HIJKLMN
+PASSWORD_TWO=OPQRSTU
