--- a/tests/.env.docker.default
+++ b/tests/.env.docker.default
@@ -25,3 +25,4 @@ USERNAME_TWO=HIJKLMN
 PASSWORD_TWO=OPQRSTU
 TEST_FILE_FOLDER=$PWD/versity-gwtest-files
 RECREATE_BUCKETS=true
+REMOVE_TEST_FILE_FOLDER=true
