--- a/.github/workflows/docker-bats.yaml
+++ b/.github/workflows/docker-bats.yaml
@@ -25,4 +25,4 @@ jobs:
         run: sudo apt-get install -y docker-compose
 
       - name: Run Docker Container
-        run: docker-compose -f docker-compose-bats.yml up posix_backend
+        run: docker-compose -f docker-compose-bats.yml up --exit-code-from posix_backend posix_backend
