test: improve file data comparisons for testing

--- a/tests/.env.default
+++ b/tests/.env.default
@@ -26,3 +26,4 @@ PASSWORD_ONE=HIJKLMN
 USERNAME_TWO=HIJKLMN
 PASSWORD_TWO=OPQRSTU
 TEST_FILE_FOLDER=$PWD/versity-gwtest-files
+REMOVE_TEST_FILE_FOLDER=false
