--- a/tests/docker-compose-bats.yml
+++ b/tests/docker-compose-bats.yml
@@ -1,34 +1,42 @@
 services:
   no_certs:
     build:
-      context: .
-      dockerfile: Dockerfile_test_bats
+      context: ../
+      dockerfile: tests/Dockerfile_test_bats
       args:
         - CONFIG_FILE=tests/.env.nocerts
   static_buckets:
     build:
-      context: .
-      dockerfile: Dockerfile_test_bats
+      context: ../
+      dockerfile: tests/Dockerfile_test_bats
       args:
         - CONFIG_FILE=tests/.env.static
   posix_backend:
     build:
-      context: .
-      dockerfile: Dockerfile_test_bats
+      context: ../
+      dockerfile: tests/Dockerfile_test_bats
       args:
         - CONFIG_FILE=tests/.env.default
     image: bats_test
   s3_backend:
     build:
-      context: .
-      dockerfile: Dockerfile_test_bats
+      context: ../
+      dockerfile: tests/Dockerfile_test_bats
       args:
         - CONFIG_FILE=tests/.env.s3
         - SECRETS_FILE=tests/.secrets.s3
+  s3api_only:
+    build:
+      context: ../
+      dockerfile: tests/Dockerfile_test_bats
+      args:
+        - CONFIG_FILE=tests/.env.default
+    image: bats_test
+    command: ["s3api"]
   direct:
     build:
-      context: .
-      dockerfile: Dockerfile_direct
+      context: ../
+      dockerfile: tests/Dockerfile_direct
     volumes:
       - ./.env.direct:/home/tester/tests/.env.direct
       - ./.secrets.direct:/home/tester/tests/.secrets.direct
