fix: Fixed the request uri path escape to support object key special characters

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,7 @@ tests/!s3cfg.local.default
 
 # grafana's local database (kept on filesystem for survival between instantiations)
 metrics-exploration/grafana_data/**
+
+# bats tools
+/tests/bats-assert
+/tests/bats-support
