--- a/tests/docker-compose-bats.yml
+++ b/tests/docker-compose-bats.yml
@@ -25,14 +25,14 @@ services:
       args:
         - CONFIG_FILE=tests/.env.s3
         - SECRETS_FILE=tests/.secrets.s3
-  s3api_only:
+  s3api_np_only:
     build:
       context: ../
       dockerfile: tests/Dockerfile_test_bats
       args:
         - CONFIG_FILE=tests/.env.default
     image: bats_test
-    command: ["s3api"]
+    command: ["s3api-non-policy"]
   direct:
     build:
       context: ../
