test: REST retention, versioning testing, misc cleanup

--- a/tests/.env.default
+++ b/tests/.env.default
@@ -27,3 +27,4 @@ USERNAME_TWO=HIJKLMN
 PASSWORD_TWO=OPQRSTU
 TEST_FILE_FOLDER=$PWD/versity-gwtest-files
 REMOVE_TEST_FILE_FOLDER=true
+VERSIONING_DIR=/tmp/versioning
