test: more versioning, legal hold testing, command reporting

--- a/tests/.env.default
+++ b/tests/.env.default
@@ -28,3 +28,4 @@ PASSWORD_TWO=OPQRSTU
 TEST_FILE_FOLDER=$PWD/versity-gwtest-files
 REMOVE_TEST_FILE_FOLDER=true
 VERSIONING_DIR=/tmp/versioning
+COMMAND_LOG=command.log
