--- a/tests/.env.default
+++ b/tests/.env.default
@@ -29,3 +29,4 @@ TEST_FILE_FOLDER=$PWD/versity-gwtest-files
 REMOVE_TEST_FILE_FOLDER=true
 VERSIONING_DIR=/tmp/versioning
 COMMAND_LOG=command.log
+TIME_LOG=time.log
