--- a/tests/.env.docker.default
+++ b/tests/.env.docker.default
@@ -26,3 +26,4 @@ PASSWORD_TWO=OPQRSTU
 TEST_FILE_FOLDER=$PWD/versity-gwtest-files
 RECREATE_BUCKETS=true
 REMOVE_TEST_FILE_FOLDER=true
+VERSIONING_DIR=/tmp/versioning
